[metadata]
name = example-package-CIARANCROMWELL
version = 0.0.1
author = Ciaran Cromwell
author_email = zkap124@live.rhul.ac.uk
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ciarancromwell/PH3010_AdvancedPython_CiaranCromwell
project_urls =
    Bug Tracker = https://github.com/ciarancromwell/PH3010_AdvancedPython_CiaranCromwell/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    add_one = example_package.command_line_interface:main
